[package]
name = "nginx-with-ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
nginx-with-ebpf-common = { path = "../nginx-with-ebpf-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
blazesym = "=0.2.0-alpha.1"

[[bin]]
name = "nginx-with-ebpf"
path = "src/main.rs"
